@@ -138,6 +138,7 @@ BG_Game::BG_Game()
 		add_resource("files/gameflx", "<DATA>/exult_bg.flx", 0);
 
 		add_resource("config/defaultkeys", "<DATA>/exult_bg.flx", EXULT_BG_FLX_DEFAULTKEYS_TXT);
+		add_resource("config/bodies", "<DATA>/exult_bg.flx", EXULT_BG_FLX_BODIES_BG_TXT);
 
 		add_resource("palettes/count", 0, 18);
 		add_resource("palettes/0", PALETTES_FLX, 0);
